<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_notifications"
        android:title="@string/menu_notifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/navigation_events"
        android:title="@string/menu_events"
        app:showAsAction="never" />
    <item
        android:id="@+id/navigation_files"
        android:title="Study Materials"
        app:showAsAction="never" />
    <item
        android:id="@+id/navigation_gallery"
        android:title="@string/menu_gallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/navigation_timetable"
        android:title="@string/menu_timetable"
        app:showAsAction="never" />
    <item
        android:id="@+id/navigation_search_student"
        android:title="@string/menu_search_student"
        app:showAsAction="never" />
    <item
        android:id="@+id/navigation_profile"
        android:title="@string/menu_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/navigation_settings"
        android:title="Settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/navigation_help"
        android:title="Help &amp; Support"
        app:showAsAction="never" />
    <item
        android:id="@+id/navigation_about"
        android:title="About"
        app:showAsAction="never" />
    <item
        android:id="@+id/navigation_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
</menu>
